--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -5,6 +5,7 @@ import /vendor/etc/init/hw/init.mtkincalladj.rc
 import /vendor/etc/init/hw/init.project.rc
 import /vendor/etc/init/hw/init.sensor_1_0.rc
 import /vendor/etc/init/hw/init.ttl.rc
+import /vendor/etc/init/hw/init.xiaomi_parts.rc
 import /vendor/etc/init/hw/init.modem.rc
 
 on early-init
